--- a/Website/index.html
+++ b/Website/index.html
@@ -27,9 +27,9 @@
     <div class="et-hero-tabs-container">
         <a class="et-hero-tab" href="#tab-es6">Meet our Artists</a>
         <a class="et-hero-tab" href="#tab-flexbox">Our Inventory</a>
-        <a class="et-hero-tab" href="#tab-react">Custom pieces</a>
-        <a class="et-hero-tab" href="#tab-angular">Angular</a>
-        <a class="et-hero-tab" href="#tab-other">Other</a>
+        <a class="et-hero-tab" href="#tab-react">Manage Your Art</a>
+        <a class="et-hero-tab" href="#tab-angular">Customer Management</a>
+        <a class="et-hero-tab" href="#tab-other">Report & Analytics</a>
         <span class="et-hero-tab-slider"></span>
     </div>
 </section>
@@ -52,19 +52,19 @@
     </section>
         <section class="et-slide" id="tab-flexbox">
             <h1>Our Inventory</h1>
-            <h3>something about flexbox</h3>
+            <h3>[Something about our inventory/artwork]</h3>
         </section>
         <section class="et-slide" id="tab-react">
             <h1>Manage Your Art</h1>
-            <h3>something about react</h3>
+            <h3>[Something about Custom Pieces]</h3>
         </section>
         <section class="et-slide" id="tab-angular">
             <h1>Customer Management</h1>
-            <h3>something about angular</h3>
+            <h3>[Something about Customer Management]</h3>
         </section>
         <section class="et-slide" id="tab-other">
             <h1>Reports & Analytics</h1>
-            <h3>something about other</h3>
+            <h3>[Something about R&A]</h3>
         </section>
         </main>
 
